// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for Kameleoon's track destination action: all fields 1`] = `
Object {
  "anonymousId": "3P*S5*01a",
  "context": Object {
    "testType": "3P*S5*01a",
  },
  "event": "3P*S5*01a",
  "messageId": "3P*S5*01a",
  "properties": Object {
    "kameleoonVisitorCode": "3P*S5*01a",
    "testType": "3P*S5*01a",
  },
  "timestamp": Any<String>,
  "type": "3P*S5*01a",
  "userId": "3P*S5*01a",
}
`;

exports[`Testing snapshot for Kameleoon's track destination action: required fields 1`] = `
Object {
  "event": "3P*S5*01a",
  "messageId": "3P*S5*01a",
  "properties": Object {},
  "timestamp": Any<String>,
  "type": "3P*S5*01a",
}
`;
